--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^23.4.4",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
+    "merge-refs": "^1.2.1",
     "next": "13.4.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
