--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i18next-resources-to-backend": "^1.1.4",
     "merge-refs": "^1.2.1",
     "next": "13.4.1",
+    "object-hash": "^3.0.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,6 +49,7 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
+    "@types/object-hash": "^3.0.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
